--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
             </div>
 
             <div class="banners">
-                <div class="banner-item" style="background-image: url(../img/banner-1.jpg);">
+                <div class="banner-item" style="background-image: url(img/banner-1.jpg);">
                     <div class="banner-item__inner">
                         <h3 class="banner-item__title banner-item__title--black">Это выгодно!</h3>
                         <p class="banner-item__subtitle banner-item__subtitle--black">Выбери любые 3 товара и получи
@@ -945,14 +945,14 @@
                         </p>
                     </div>
                 </div>
-                <div class="banner-item" style="background-image: url(../img/banner-2.jpg);">
+                <div class="banner-item" style="background-image: url(img/banner-2.jpg);">
                     <div class="banner-item__inner">
                         <h3 class="banner-item__title">Новинки</h3>
                         <p class="banner-item__subtitle">В нашем каталоге появились новые товары</p>
                         <a href="#" class="banner-item__link link-reset">Выбрать товар</a>
                     </div>
                 </div>
-                <div class="banner-item" style="background-image: url(../img/banner-3.jpg);">
+                <div class="banner-item" style="background-image: url(img/banner-3.jpg);">
                     <div class="banner-item__inner">
                         <h3 class="banner-item__title">Бренды</h3>
                         <p class="banner-item__subtitle">Выберите нужный вам бренд</p>
